<resources>
    <string name="app_name">PortEmainUI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_flight_title">운항 정보</string>
    <string name="navigation_departure_title">출국장 현황</string>
    <string name="navigation_e_t_c_title">기타</string>
    <string name="navigation_my_page2_title">마이페이지</string>
    <string name="navigation_parking_title">주차장 현황</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
