<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/parkingFragment"
        android:icon="@drawable/park"
        android:title="@string/navigation_parking_title" />
    <item
        android:id="@id/departureFragment"
        android:icon="@drawable/departure"
        android:title="@string/navigation_departure_title" />
    <item
        android:id="@id/myPageFragment2"
        android:icon="@drawable/mypage"
        android:title="@string/navigation_my_page2_title" />
    <item
        android:id="@id/flightFragment"
        android:icon="@drawable/flight"
        android:title="@string/navigation_flight_title" />
    <item
        android:id="@id/ETCFragment"
        android:icon="@drawable/etc"
        android:title="@string/navigation_e_t_c_title" />
</menu>